# traq-bot-http-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  cspell.json  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml
.cspell-dict/: lib-words.txt  test-words.txt  tool-words.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  others.md
.github/workflows/: audit.yml  filter-changelog.py  flake-update.yml  release.yml  rust.yml  update.yml  validate.yml
examples/: basic-with-axum.rs
examples/basic-with-axum/: Cargo.toml
examples/basic-with-axum/src/: main.rs
examples/basic-with-rocket/: Cargo.toml
examples/basic-with-rocket/src/: main.rs
examples/handler-with-axum/: Cargo.toml
examples/handler-with-axum/src/: main.rs
src/: error.rs  events.rs  handler.rs  lib.rs  macros.rs  parser.rs  payloads.rs  test_utils.rs
src/handler/: future.rs
src/parser/: http.rs
src/payloads/: channel.rs  message.rs  serde.rs  stamp.rs  system.rs  tag.rs  types.rs  user.rs  user_group.rs
testdata/channel/: channel_created.json  channel_topic_changed.json
testdata/message/: bot_message_stamps_updated.json  direct_message_deleted.json  direct_message_updated.json  message_deleted.json  message_updated.json
testdata/stamp/: stamp_created.json
testdata/system/: joined.json  left.json  ping.json
testdata/tag/: tag_added.json
testdata/user/: user_created.json
testdata/user-group/: user_group_admin_added.json  user_group_created.json  user_group_deleted.json  user_group_updated.json
tests/: derive.rs  parser.rs  payloads.rs
