[package]
name = "traq-bot-http"
version = "0.4.1"
edition = "2021"
description = "Library to parse POST requests of traQ BOT event"
rust-version = "1.64"
homepage = "https://github.com/H1rono/traq-bot-http-rs"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/H1rono/traq-bot-http-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2"

[dependencies.uuid]
version = "1.3"
features = ["v4", "serde"]
optional = true

[dependencies.time]
version = "0.3"
features = ["serde", "parsing", "formatting", "macros"]
optional = true

[features]
uuid = ["dep:uuid"]
time = ["dep:time"]
