[package]
name = "traq-bot-http"
version = "0.8.0"
authors = ["H1rono <hronok66@gmail.com>"]
edition = "2021"
description = "Library to parse POST requests of traQ BOT event"
rust-version = "1.67.1"
homepage = "https://github.com/H1rono/traq-bot-http-rs"
keywords = ["http", "web", "framework"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/H1rono/traq-bot-http-rs"
include = ["/src", "/examples", "/README.md", "/LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"

[dependencies.uuid]
version = "1.3"
features = ["v4", "serde"]
optional = true

[dependencies.time]
version = "0.3"
features = ["serde", "parsing", "formatting", "macros"]
optional = true

[dependencies.chrono]
version = "0.4"
optional = true
features = ["serde"]

[dev-dependencies]
http = "0.2"
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "basic-with-axum"
path = "examples/basic-with-axum.rs"

[features]
uuid = ["dep:uuid"]
time = ["dep:time"]
chrono = ["dep:chrono"]
